<resources>
    <string name="app_name">Ecolution</string>


    <!-- login / register -->
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="no_account">No Account?</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="nationality">Nationality</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="sign_up_form">Sign Up Form</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="confirm">Confirm</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="agree_with">Agree With</string>
    <string name="enter_your_registered_email_to_reset_password">Enter your registered email to reset password</string>
    <string name="reset_password">Reset Password</string>

    <!-- Terms And Conditions -->
    <string name="t_anc_c">Terms &amp; Conditions</string>
    <string name="register_t_c_3_2">3.2 You agree to (a) keep your password confidential and user only your email and password when logging in, (b) immediately notify Ecolution of any unauthorised use of your Account (c), ensure that your Account information is accurate and up-to-date.</string>
    <string name="register_t_c_3_1">3.1 Some functions of our Services require registration for an Account by selecting a unique registered email and password, and by providing certain personal information. If you select a User ID that is offensive or inappropriate, Ecolution has the right to suspend or terminate your Account.</string>
    <string name="register_t_c_3">3. Accounts and Security</string>
    <string name="register_t_c_2_1">2.1 Your privacy is very important to us at Ecolution. To better protect your rights, your information and data will not be shared to any third parties.</string>
    <string name="register_t_c_2">2. Privacy</string>
    <string name="register_t_c_1_3">1.3 Before becoming a User of the application, you must read and accept all of the terms and conditions in, and linked to, these Terms of Service and you must consent to the processing of your personal data.</string>
    <string name="register_t_c_1_2">1.2 The Services include an platform service that provides a place and opportunity for recycling practices between Recycling Station and the users. Ecolution reserves the right to remove any Content or information uploaded by you on the application.</string>
    <string name="register_t_c_1_1">1.1 Welcome to Ecolution. Please read the following Terms of Service carefully before using this application or registering an Ecolution account so that you are aware of your legal rights and obligations with respect to Ecolution.</string>
    <string name="register_t_c_1">1. Introduction</string>
    <string name="global_ranking_title">Global Ranking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_ranking">Ranking</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_Reward">Reward</string>
    <string name="title_reward">Reward</string>
    <string name="title_home">Home</string>

    <!-- About Us -->
    <string name="title_aboutUs">About Us</string>
    <string name="aboutUs_WWD">What We do</string>
    <string name="aboutUsSentence">At Ecolution, we dedicated to increasing community awareness, promoting Mother Earth\'s conservation,
        conveying the severity of ecosystem destruction,
        and spreading nature\'s beauty. Join us in preserving and protecting for a sustainable future.</string>
    <string name="title_SocialMedia">Social Media</string>
    <string name="socialMedia_facebook">\u0040Ecolution</string>
    <string name="socialMedia_tiktok">\u0040Ecolution3R</string>
    <string name="socialMedia_instagram">\u0040Ecolution.3R</string>

    <!-- Article -->
    <string name="read_more">Read More...</string>
    <string name="article1">The recycling rate in the United States has increased from less than 7% in 1960 to over 34% in 2015. While the progress is promising, we still have a long way to go...</string>
    <string name="article2">Recycling is important in today’s world if we want to leave this planet for our future generations. It is good for the environment...</string>
    <string name="article3">Reduce, Reuse, Recycle — Three great ways YOU can eliminate waste and protect your environment! The environment is everything around you including the air, plants,...</string>
    <string name="article4">Seven ways to improve your recycling habits 1. Use less plastic. One of the easiest ways to use less plastic includes having a personal zero ...</string>
    <string name="article5">The environment consists of all things-living or nonliving that influence human life. It plays a vital role in the functioning of our daily lives... </string>

    <!-- Update Profile -->
    <string name="update_bttn_title2">Update Your Profile Info</string>
    <string name="update_bio_hint">Your Bio Information</string>
    <string name="edit_profile_bttn">Edit Profile</string>
    <string name="current_points_title">Total Points</string>
    <string name="logout_title">Logout</string>

    <!-- User Profile -->
    <string name="username_s">%s</string>
    <string name="email">Email</string>
    <string name="email_s">%s</string>
    <string name="nationality_s">%s</string>
    <string name="gender">Gender</string>
    <string name="gender_s">%s</string>
    <string name="phone_no">Phone No</string>
    <string name="phone_no_s">%s</string>
    <string name="user_bio_title">BIO</string>
    <string name="user_bio">Your Bio information</string>
    <string name="user_ranking_point"><![CDATA[Ranking & Point]]></string>
    <string name="current_ranking_title">Current Ranking</string>
    <string name="user_ranking_point_s">%s th</string>
    <string name="current_ranking_title_s">%s points</string>
    <string name="naviBar_rank_title">Ranking</string>
    <string name="you_have_collected">You have collected</string>
    <string name="total_point">0</string>
    <string name="points">Points</string>

    <!-- reward detail -->
    <string name="points_required_value">%s pts</string>
    <string name="points_required">Points to redeem</string>
    <string name="valid_duration_value">%s to %s</string>
    <string name="valid_duration">Valid Duration</string>
    <string name="description">Description</string>
    <string name="description_value">Description</string>
    <string name="reward_name">Reward Name</string>
    <string name="t_c_value1">Rewards are available from %s to %s, for one-time use only.</string>
    <string name="t_c_value2">Rewards will expire by %s at 11.59pm, no redemption will be honoured after this.</string>
    <string name="t_c_value3">Redemption valid while stocks last and first come first served basis. Expired Reward is not valid for use unless specified.</string>
    <string name="t_c_value4">Non-transferable, non-refundable and cannot be exchanged for cash.</string>
    <string name="t_c_value5">Can only be used in a single transaction.</string>

    <!-- reward list -->
    <string name="reward_starbucks">Starbucks Buy 1 Free 1</string>
    <string name="reward_subway">Subway Free Drinks</string>
    <string name="reward_spotify">Spotify 3 months Premium</string>
    <string name="reward_grab">Grab RM5 off</string>
    <string name="reward_milo">Milo 50% off</string>
    <string name="view_reward_button">View</string>
    <string name="point_in">Point-In</string>
    <string name="back">Back</string>
    <string name="user_id">User ID</string>
    <string name="kg">KG</string>
    <string name="calculate">Calculate</string>
    <string name="user_id_title">User ID</string>
    <string name="user_id_value">id</string>
</resources>