<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_page"
    tools:context=".register.RegisterActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:src="@drawable/ic_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_up_form"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="30dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="30dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/signup_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_email"
        app:layout_constraintTop_toBottomOf="@+id/signup_email"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/signup_password_confirm"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="30dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toBottomOf="@+id/signup_password"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="30dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/signup_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_username"
        app:layout_constraintTop_toBottomOf="@+id/signup_username"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/signup_nationality"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_input_spinner"
        android:ems="10"
        android:hint="@string/nationality"
        android:minHeight="30dp"
        android:paddingStart="24dp"
        android:spinnerMode="dialog"
        android:text="@string/nationality"
        app:layout_constraintEnd_toEndOf="@+id/signup_password_confirm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_confirm"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/signup_phone_number"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="30dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/signup_nationality"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_nationality"
        app:layout_constraintTop_toBottomOf="@+id/signup_nationality"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/date_of_birth"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_cake"
        android:drawablePadding="4dp"
        android:ems="10"
        android:minHeight="30dp"
        android:padding="8dp"
        android:text="@string/date_of_birth"
        android:textColor="#A9A9A9"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_phone_number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/signup_phone_number"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/signup_confirm"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/custom_button"
        android:text="@string/confirm"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/signup_hide_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/signup_password"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toTopOf="@+id/signup_password"
        app:srcCompat="@drawable/ic_visibility_off" />

    <ImageButton
        android:id="@+id/signup_hide_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/signup_password_confirm"
        app:layout_constraintEnd_toEndOf="@+id/signup_password_confirm"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="@+id/signup_password_confirm"
        app:layout_constraintTop_toTopOf="@+id/signup_password_confirm"
        app:srcCompat="@drawable/ic_visibility_off" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/signup_nationality"
        app:layout_constraintEnd_toEndOf="@+id/signup_nationality"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="@+id/signup_nationality"
        app:layout_constraintTop_toTopOf="@+id/signup_nationality"
        app:srcCompat="@drawable/ic_flag" />


    <TextView
        android:id="@+id/term_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/lightBlue"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/signup_radio_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_radio_button"
        app:layout_constraintVertical_bias="0.541">

    </TextView>

    <CheckBox
        android:id="@+id/signup_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/agree_with"
        android:textColor="#A9A9A9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signup_confirm"
        app:layout_constraintEnd_toStartOf="@+id/term_condition"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

    </CheckBox>


</androidx.constraintlayout.widget.ConstraintLayout>